--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
 <script src="https://cdn.ckeditor.com/ckeditor5/39.0.1/classic/ckeditor.js"></script>
 
 <div id="app"></div>
-<div id="editor"></div>
+<div id="editor">
+  Fired when the data and all additional editor components are ready. Note: This
+  event is most useful for plugin developers. When integrating the editor with
+  your website or application, you do not have to listen to editor#ready because
+  when the promise returned by the static Editor.create() event is resolved, the
+  editor is already ready. In fact, since the first moment when the editor
+  instance is available to you is inside then()'s callback, you cannot even add
+  a listener to the editor#ready event.
+</div>
