--- a/index.html
+++ b/index.html
@@ -10,3 +10,5 @@
   instance is available to you is inside then()'s callback, you cannot even add
   a listener to the editor#ready event.
 </div>
+
+<button id="submit">GET_DATA</button>
